fix: add the z-index into navbar and firstframe
fix bug where the navbar disguise in the transparent square of FrameStart

--- a/src/Components/MainPage-FrameStart/MainPage-FrameStart.css
+++ b/src/Components/MainPage-FrameStart/MainPage-FrameStart.css
@@ -7,6 +7,8 @@
     display: flex;
     justify-content: start;
     align-items: center;
+    overflow: hidden;
+    z-index: -1;
 }
 
 #transparent-square{
